A page with apartments has been implemented